[package]
name = "jf-advz"
version = "0.2.2"
description = "A Verifiable information dispersal (VID) scheme."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "itertools/use_std",
    "jf-utils/std",
    "jf-pcs/std",
    "jf-merkle-tree-compat/std",
]
test-srs = ["jf-pcs/test-srs"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "jf-utils/parallel",
    "jf-pcs/parallel",
    "rayon",
]
seq-fk-23 = [] # FK23 without parallelism
gpu-vid = ["jf-pcs/icicle"]
print-trace = ["ark-std/print-trace"]
kzg-print-trace = [
    "print-trace",
] # leave disabled to reduce pollution in downstream users of KZG (such as VID)

[dependencies]
anyhow = "1.0"
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
# not a direct dependency, but we need serde;
# inherited from digest-v0.10.7->crypto_common->generic-array
generic-array = { version = "0.14.6", features = ["more_lengths", "serde"] }
itertools = { workspace = true, features = ["use_alloc"] }
jf-merkle-tree-compat = { git = "https://github.com/EspressoSystems/jellyfish-compat", tag = "jf-merkle-tree-compat-v0.2.0", default-features = false }
jf-pcs = { workspace = true }
jf-utils = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
criterion = "0.7.0"
jf-pcs = { workspace = true, features = ["test-srs"] }
sha2 = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
# not directly used, but used by every member crate via ark-std
# since we can't specify [target] in workspace Cargo.toml, specify here
getrandom = { version = "^0.2", features = ["js"] }

[[bench]]
name = "advz"
harness = false
required-features = ["test-srs"]

[[bench]]
name = "advz_multiplicity"
harness = false
required-features = ["test-srs"]
